--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/6-filters.css') }}?{{cache_id }}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/8-places.css') }}?{{cache_id }}">
     <link rel="icon" href="{{url_for('static', filename='images/icon.png') }}?{{cache_id }}">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="static/scripts/1-hbnb.js?{{ cache_id }}"></script>
     <title>HBnB</title>
   </head>
   <body>
@@ -40,7 +42,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+		  <li><input type="checkbox" data-id="{{ amenity_id }}" data-name="{{ amenity_name }}">  {{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
